# python-notifier

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  ChangeLog  MANIFEST.in  Makefile  README  README.md  TODO  setup.cfg  setup.py  test-generic.py  test-gtk.py  test-qt.py  test-wx.py  tox.ini
PKG/debian/etch/debian/: changelog  rules
PKG/debian/lenny/debian/: changelog  control  copyright  python-notifier.docs  rules
debian/: changelog  control  copyright  pynotifier.docs  pynotifier.examples  python-notifier.docs  python3-notifier.pyinstall  rules
examples/: callbacks.py  log.py  logger.py  process.py  process2.py  process3.py  process4.py  signal.py  signal2.py  test-generic.py  test-gtk.py  test-qt-cli.py  test-qt.py  test-twisted.py  test-wx.py  threads.py  threads2.py  threads3.py
notifier/: __init__.py  dispatch.py  log.py  nf_generic.py  nf_gtk.py  nf_qt.py  nf_tornado.py  nf_twisted.py  nf_wx.py  popen.py  signals.py  threads.py  version.py
tests/: test_generic.py  test_init.py  test_popen.py  test_qt.py  test_signals.py  test_threads.py  test_twisted.py
