[metadata]
name = python-notifier
version = attr: notifier.version.VERSION
maintainer = Univention GmbH
maintainer_email = packages@univention.de
description = A generic notifier/event scheduler abstraction
long_description = file:README.md
url = https://github.com/univention/python-notifier
license = LGPLv2
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: X11 Applications :: GTK
	Environment :: X11 Applications :: Qt
	Framework :: Twisted
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules
	Operating System :: Unix

[options]
zip_safe = False
python_requires = >=2.7
packages = find:
setup_requires =
	setuptools
install_requires =
	monotonic; python_version < "3.3"
tests_require =
	coverage
	pytest
	pytest-cov
	mock

[options.extras_require]
qt4 = PyQt4
gtk = PyGObject
twisted = Twisted
